--- a/src/sass/components/index.scss
+++ b/src/sass/components/index.scss
@@ -1,4 +1,19 @@
 @use 'header';
 @use 'mobile-product-images';
+@use 'desktop-product-images';
 @use 'product';
 @use 'cart-box';
+
+@media screen and (min-width: 1440px) {
+  main {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
